[project]
name = "autolume"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "audioread>=3.1.0",
    "certifi>=2025.10.5",
    "cffi>=2.0.0",
    "charset-normalizer>=3.4.4",
    "click>=8.3.0",
    "clip",
    "colorama>=0.4.6",
    "contourpy>=1.3.2",
    "cycler>=0.12.1",
    "decorator>=5.2.1",
    "fbpca>=1.0",
    "ffmpeg-python>=0.2.0",
    "filelock>=3.20.0",
    "fonttools>=4.60.1",
    "ftfy>=6.3.1",
    "future>=1.0.0",
    "gfw>=0.0.4",
    "glfw>=2.10.0",
    "idna>=3.11",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "imgui>=2.0.0",
    "jinja2>=3.1.6",
    "joblib>=1.5.2",
    "kiwisolver>=1.4.9",
    "kmeans-pytorch>=0.3",
    "kornia>=0.8.1",
    "lazy-loader>=0.4",
    "librosa>=0.11.0",
    "llvmlite>=0.45.1",
    "lpips>=0.1.4",
    "markupsafe>=3.0.3",
    "matplotlib>=3.10.7",
    "moviepy>=2.2.1",
    "mpmath>=1.3.0",
    "msgpack>=1.1.2",
    "ndi-python==5.1.1.2",
    "networkx>=3.4.2",
    "ninja>=1.13.0",
    "numba>=0.62.1",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "opensimplex>=0.4.5.1",
    "packaging>=25.0",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "platformdirs>=4.5.0",
    "pooch>=1.8.2",
    "prolog>=0.3.1",
    "psutil>=7.1.2",
    "pyaudio>=0.2.14",
    "pycparser>=2.23",
    "pyopengl>=3.1.10",
    "pyparsing>=3.2.5",
    "python-dateutil>=2.9.0.post0",
    "python-osc>=1.9.3",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
    "regex>=2025.10.23",
    "requests>=2.32.5",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "six>=1.17.0",
    "soundfile>=0.13.1",
    "soxr>=1.0.0",
    "sympy>=1.14.0",
    "termcolor>=3.2.0",
    "threadpoolctl>=3.6.0",
    "tifffile>=2025.5.10",
    "timm>=1.0.21",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
    "typing-extensions>=4.15.0",
    "tzdata>=2025.2",
    "urllib3>=2.5.0",
    "visualizer>=0.0.10",
    "wcwidth>=0.2.14",
    "wordcloud>=1.9.4",
]

[tool.uv]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64' and python_version == '==3.10.*'",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git", rev = "a9b1bf5920416aaeaec965c25dd9e8f98c864f16" }
